kuberetes/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql
      volumes:
        - name: db-data
          emptyDir: {}
---
