kuberetes/postgres-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: my-postgres-svc
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
    - port: 5432
      protocol: "TCP"
      targetPort: 5432
---
